Password Manager 20.2.0
* JDK-14 and JavaFX 14
* Native packages build in pom.xml