@@ -4,22 +4,26 @@
     <modelVersion>4.0.0</modelVersion>
     <groupId>org.panteleyev</groupId>
     <artifactId>password-manager</artifactId>
-    <version>20.1.1</version>
+    <version>20.2.0</version>
     <packaging>jar</packaging>
 
     <properties>
-        <app.main.class>org.panteleyev.pwdmanager.PasswordManagerApplication</app.main.class>
+        <appModule>password.manager</appModule>
+        <appMainClass>org.panteleyev.pwdmanager.PasswordManagerApplication</appMainClass>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-        <maven.compiler.source>13</maven.compiler.source>
-        <maven.compiler.target>13</maven.compiler.target>
+        <maven.compiler.source>14</maven.compiler.source>
+        <maven.compiler.target>14</maven.compiler.target>
         <commons-version>20.1.1</commons-version>
-        <javafx-version>13.0.1</javafx-version>
+        <javafx-version>14</javafx-version>
         <testng-version>6.14.3</testng-version>
         <!-- Plugins -->
         <mavenToolchainPluginVersion>3.0.0</mavenToolchainPluginVersion>
         <mavenCompilerPluginVersion>3.8.1</mavenCompilerPluginVersion>
         <mavenJarPluginVersion>3.2.0</mavenJarPluginVersion>
+        <mavenSurefirePluginVersion>3.0.0-M4</mavenSurefirePluginVersion>
         <mavenDependencyPluginVersion>3.1.1</mavenDependencyPluginVersion>
+        <javaFxPluginVersion>0.0.4</javaFxPluginVersion>
+        <execMavenPluginVersion>1.6.0</execMavenPluginVersion>
     </properties>
 
     <dependencyManagement>
@@ -89,7 +93,7 @@
                 <configuration>
                     <toolchains>
                         <jdk>
-                            <version>13</version>
+                            <version>14</version>
                         </jdk>
                     </toolchains>
                 </configuration>
@@ -98,6 +102,11 @@
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-compiler-plugin</artifactId>
                 <version>${mavenCompilerPluginVersion}</version>
+                <configuration>
+                    <compilerArgs>
+                        <arg>--enable-preview</arg>
+                    </compilerArgs>
+                </configuration>
             </plugin>
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
@@ -107,9 +116,17 @@
                     <outputDirectory>target/jmods</outputDirectory>
                     <archive>
                         <manifestEntries>
-                            <Main-Class>${app.main.class}</Main-Class>
+                            <Main-Class>${appMainClass}</Main-Class>
                         </manifestEntries>
                     </archive>
+                </configuration>
+            </plugin>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-surefire-plugin</artifactId>
+                <version>${mavenSurefirePluginVersion}</version>
+                <configuration>
+                    <argLine>--enable-preview</argLine>
                 </configuration>
             </plugin>
             <plugin>
@@ -127,6 +144,98 @@
                             <includeScope>compile</includeScope>
                             <includeScope>runtime</includeScope>
                             <outputDirectory>target/jmods</outputDirectory>
+                        </configuration>
+                    </execution>
+                </executions>
+            </plugin>
+            <plugin>
+                <groupId>org.openjfx</groupId>
+                <artifactId>javafx-maven-plugin</artifactId>
+                <version>${javaFxPluginVersion}</version>
+                <configuration>
+                    <mainClass>${appModule}/${appMainClass}</mainClass>
+                    <options>
+                        <option>--enable-preview</option>
+                        <option>-Dfile.encoding=UTF-8</option>
+                    </options>
+                </configuration>
+            </plugin>
+            <plugin>
+                <groupId>org.codehaus.mojo</groupId>
+                <artifactId>exec-maven-plugin</artifactId>
+                <version>${execMavenPluginVersion}</version>
+                <configuration>
+                    <longModulepath>false</longModulepath>
+                </configuration>
+                <executions>
+                    <execution>
+                        <id>dist-win</id>
+                        <phase>none</phase>
+                        <goals>
+                            <goal>exec</goal>
+                        </goals>
+                        <configuration>
+                            <executable>
+                                ${java.home}/bin/jpackage
+                            </executable>
+                            <arguments>
+                                <argument>--module</argument>
+                                <argument>${appModule}/${appMainClass}</argument>
+                                <argument>--runtime-image</argument>
+                                <argument>${java.home}</argument>
+                                <argument>--dest</argument>
+                                <argument>target/dist</argument>
+                                <argument>-p</argument>
+                                <argument>target/jmods</argument>
+                                <argument>--java-options</argument>
+                                <argument>-Dfile.encoding=UTF-8 --enable-preview</argument>
+                                <argument>--icon</argument>
+                                <argument>icons/icons.ico</argument>
+                                <argument>--name</argument>
+                                <argument>Password Manager</argument>
+                                <argument>--app-version</argument>
+                                <argument>${project.version}</argument>
+                                <argument>--vendor</argument>
+                                <argument>panteleyev.org</argument>
+                                <argument>--win-menu</argument>
+                                <argument>--win-dir-chooser</argument>
+                                <argument>--win-upgrade-uuid</argument>
+                                <argument>4a8438d2-f56f-4a5a-bfbe-5cf74ea70685</argument>
+                                <argument>--win-menu-group</argument>
+                                <argument>panteleyev.org</argument>
+                            </arguments>
+                        </configuration>
+                    </execution>
+                    <execution>
+                        <id>dist-mac</id>
+                        <phase>none</phase>
+                        <goals>
+                            <goal>exec</goal>
+                        </goals>
+                        <configuration>
+                            <executable>
+                                ${java.home}/bin/jpackage
+                            </executable>
+                            <arguments>
+                                <argument>--module</argument>
+                                <argument>${appModule}/${appMainClass}</argument>
+                                <argument>--runtime-image</argument>
+                                <argument>${java.home}</argument>
+                                <argument>--dest</argument>
+                                <argument>target/dist</argument>
+                                <argument>-p</argument>
+                                <argument>target/jmods</argument>
+                                <argument>--java-options</argument>
+                                <argument>-Dfile.encoding=UTF-8 --enable-preview</argument>
+                                <argument>--icon</argument>
+                                <argument>icons/icons.icns</argument>
+                                <argument>--name</argument>
+                                <argument>Password Manager</argument>
+                                <argument>--app-version</argument>
+                                <argument>${project.version}</argument>
+                                <argument>--vendor</argument>
+                                <argument>panteleyev.org</argument>
+                            </arguments>
                         </configuration>
                     </execution>
                 </executions>
